<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".fragments.CreatePostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/create_a_new_post"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/edtPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitle"
                android:layout_marginTop="15dp"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/edtPostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtPostTitle"
                android:layout_marginTop="15dp"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <ImageView
                android:id="@+id/imgPostImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@+id/edtPostPrice"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gallery" />

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgPostImage"
                android:layout_toEndOf="@+id/spnCategory"
                 android:hint="@string/category"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/spnCategory"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@+id/imgPostImage"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/edtPostBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spnCategory"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/description" />

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/edtPostBody"
                android:layout_marginBottom="5dp"
                android:src="@drawable/save" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>